--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "@heroicons/react": "^2.0.13",
     "clsx": "^1.2.1",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.0.0",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
